Handle a stop place without quays during stop places filtering